<resources>
    <string name="app_name">天天果园</string>
    <string name="default_location_adress">中国广东省深圳市南山区</string>
    <string name="tab1">主页</string>
    <string name="tab2">分类</string>
    <string name="tab3">店铺</string>
    <string name="tab4">购物车</string>
    <string name="tab5">用户中心</string>
    <string name="again_sure_exit">再按一次退出程序</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="refresh_nearby">最近刷新：</string>
    <string name="refresh_date">刷新时间</string>
    <string name="no_internet">无网络连接~！</string>
    <string name="generic_server_down">连接服务器失败~！</string>
    <string name="generic_error">网络异常,请稍后再试~！</string>
    <string name="load_error_and_retry">加载失败,点击重试!</string>
    <string name="no_data">暂无数据</string>
    <string name="format_money">￥%s</string>
    <string name="format_vip_money">会员:￥%s</string>
    <string name="format_new_money">新人:￥%s</string>
    <string name="format_money2">￥%s元</string>
    <string name="format_money_market">市场价：￥%s</string>
    <string name="format_sales">销量：%s</string>
    <string name="format_stock">库存：%s</string>
    <string name="format_store_discrible">本店说明：%s</string>
    <string name="goods_details">商品详情</string>
    <string name="shop_type1">供货商</string>
    <string name="shop_type2">经销商</string>
    <string name="go_store">进入店铺</string>
    <string name="shop_type_other">其他</string>
    <string name="goods_detail">商品介绍</string>
    <string name="goods_commend">商品评价</string>
    <string name="no_goods_details">暂无商品详情</string>
    <string name="no_goods_commends">暂无商品评价</string>
    <string name="commends_good">好评</string>
    <string name="commends_normal">中评</string>
    <string name="commends_low">差评</string>
    <string name="no_good_comments">暂无好评信息</string>
    <string name="no_normal_comments">暂无中评信息</string>
    <string name="no_low_comments">暂无差评信息</string>
    <string name="load_next_error">加载失败，点击重试</string>
    <string name="load_next_loading">正在加载&#8230;</string>
    <string name="load_next_page">加载下一页</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="become_vip">成为会员</string>
    <string name="take_factoryPrice">包邮</string>
    <string name="format_factoryPrice">运费:￥%s</string>
    <string name="add_shopping_cart_success">加入购物车成功</string>
    <string name="add_shopping_cart_failed">加入购物车失败</string>
    <string name="classify_all">全部分类</string>
    <string name="search_hint">搜索商品</string>
    <string name="synthesize">综合</string>
    <string name="price">价格</string>
    <string name="sales">销量</string>
    <string name="comment">评价</string>
    <string name="search_goods">找到相关商品&#160;</string>
    <string name="piece">&#160;件</string>
    <string name="format_comment">%s&#160;人评价</string>
    <string name="my_store">我的小店</string>
    <string name="cloud_store">云店铺</string>
    <string name="provider_store">供应商店铺</string>
    <string name="all">全部</string>
    <string name="store_service">门店服务</string>
    <string name="send_around">周边闪送</string>
    <string name="post_home">邮递到家</string>
    <string name="friend_commend">友情推荐</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="slogan">惠万店</string>
    <string name="login_by_pwd">账号密码登陆</string>
    <string name="login_by_phone">手机快捷登陆</string>
    <string name="phone_num">手&#160;&#160;机&#160;&#160;号:</string>
    <string name="login_phone_hint">输入手机号码</string>
    <string name="get_code">获取验证码</string>
    <string name="code">验&#160;&#160;证&#160;&#160;码:</string>
    <string name="code_hind">请输入验证码</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="new_password">新&#160;&#160;密&#160;&#160;码:</string>
    <string name="password_affirm">确认密码:</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_set_hint">请输入6&#8211;20位密码</string>
    <string name="find_back_pwd">找回密码</string>
    <string name="login_other">第三方帐号登录</string>
    <string name="user_deal_agree">我已阅读并同意云鲜生</string>
    <string name="user_deal">《用户使用协议》</string>
    <string name="phone_error">您输入的手机号码有误</string>
    <string name="get_code_phone_different_input_phone">您输入的手机号和获取验证码的手机号不一致</string>
    <string name="code_error">您输入的验证码有误</string>
    <string name="password_twice_different">您输入的两次密码不一致</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="reset_login_pwd_success">修改登陆密码成功</string>
    <string name="reset_login_pwd_failed">修改登陆密码失败</string>
    <string name="registering">注册中&#8230;</string>
    <string name="logining">登陆中&#8230;</string>
    <string name="please_waitting">请稍候&#8230;</string>
    <string name="already_register">该用户已注册</string>
    <string name="agress_user_deal">需同意用户使用协议才能注册</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_success">登陆成功</string>
    <string name="login_time_out_or_no">您当前未登录或者登录信息已经过期，请登录</string>
    <string name="not_vip">您当前还不是云鲜生会员,立即充值成为会员！</string>
    <string name="no_user">该用户不存在</string>
    <string name="login_name_or_pwd_wrong">用户名或密码错误</string>
    <string name="user_passed">该用户已过期</string>
    <string name="user_exception">该用户状态异常</string>
    <string name="already_have_user">该用户已注册</string>
    <string name="not_pay">待付款</string>
    <string name="not_send_goods">待发货</string>
    <string name="not_take_goods">待收货</string>
    <string name="already_take_goods">已收货</string>
    <string name="not_comment">待评价</string>
    <string name="cancel_order2">交易关闭</string>
    <string name="confirm_take_goods_msg">您确定收货吗？</string>
    <string name="deal">交易成功</string>
    <string name="ad">广告</string>
    <string name="format_today_income">%s\n今日收入</string>
    <string name="format_total_income">%s\n累计收入</string>
    <string name="format_today_apprentice_num">%s\n今日徒弟</string>
    <string name="format_welcome">欢迎您，%s</string>
    <string name="no_open">此版本未开放，请升级到最新版本使用</string>
    <string name="nick_name">昵&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;称&#160;:</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别&#160;:</string>
    <string name="phone">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机&#160;:&#160;&#160;&#160;您还没绑定手机号</string>
    <string name="phone_check">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机&#160;:&#160;正在查询&#8230;</string>
    <string name="format_phone">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机&#160;:&#160;&#160;&#160;%s</string>
    <string name="name">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名&#160;:</string>
    <string name="company_name">公司名称&#160;:</string>
    <string name="re_try">重试</string>
    <string name="query_failed">手&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;机&#160;:&#160;查询失败</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="binding">去绑定</string>
    <string name="save">保存</string>
    <string name="personage_info">个人资料</string>
    <string name="delete_shop_goods">删除本店商品</string>
    <string name="total">合计:&#160;&#160;</string>
    <string name="no_post_price">(不含运费)</string>
    <string name="go_pay">去结算</string>
    <string name="go_pay2">去付款</string>
    <string name="shopping_cart">购物车</string>
    <string name="shopping_cart_tips">会员满59包邮，非会员满99包邮</string>
    <string name="get_confirm_order_failed">获取结算订单信息失败</string>
    <string name="get_order_list_failed">获取订单信息失败</string>
    <string name="change_buy_num_failed">更改购买数量失败</string>
    <string name="delete_goods_failed">删除购物车商品失败</string>
    <string name="confirm_delete_goods">确定将此商品移出购物车？</string>
    <string name="confirm_delete_group">确定将该店铺下所有商品移出购物车？</string>
    <string name="get_shopping_cart_goods_failed">获取购物车商品失败</string>
    <string name="warm_prompt">温馨提示</string>
    <string name="warm_prompt2">温馨提示：</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="consignee">收货人：</string>
    <string name="telephone">联系电话：</string>
    <string name="area">所在区域：</string>
    <string name="address_detail">详细地址：</string>
    <string name="postcode">邮政编码：</string>
    <string name="add_new_address">新增地址</string>
    <string name="edit_address">编辑地址</string>
    <string name="add_new_address2">添加新地址</string>
    <string name="choice_province">请选择省</string>
    <string name="choice_city">请选择市</string>
    <string name="choice_town">请选择区</string>
    <string name="input_consignee">请填入收货人信息</string>
    <string name="input_consignee_tel">请正确填入收货人联系电话</string>
    <string name="input_address_detail">请填入详细地址信息</string>
    <string name="input_postcode">请正确填入邮政编码</string>
    <string name="choice_area">请选择所在区域</string>
    <string name="saving">保存中&#8230;</string>
    <string name="add_address_failed">添加新地址失败</string>
    <string name="add_address_success">添加新地址成功</string>
    <string name="update_address_success">更新地址成功</string>
    <string name="set_receive_address_default">设为默认收货地址</string>
    <string name="no_receive_address_default">你还未设置默认收货地址,请设置</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="receive_address">收货地址</string>
    <string name="confirm_delete_address">确定删除该收货地址？</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="set_success">设置成功</string>
    <string name="set_default_address_failed">设置默认地址失败</string>
    <string name="pay_total_money">应付总金额：</string>
    <string name="submit_order">提交订单</string>
    <string name="confirm_order">确认订单</string>
    <string name="num">数量&#160;x%s</string>
    <string name="goods_total">商品总额：</string>
    <string name="post_total">运费总额：</string>
    <string name="leave_message">给卖家留言</string>
    <string name="format_count">(共%s件)</string>
    <string name="create_order_failed">创建订单失败</string>
    <string name="create_order_success">下单成功</string>
    <string name="you_order_success">您的订单已提交成功</string>
    <string name="order_num">订单号：</string>
    <string name="pay_money">支付金额：</string>
    <string name="take_person">收&#160;&#160;货&#160;&#160;人：%s</string>
    <string name="format_telephone">联系电话：%s</string>
    <string name="format_address">联系地址：%s</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="check_logistics">查看物流</string>
    <string name="confirm_take_goods">确认收货</string>
    <string name="go_comment">去评价</string>
    <string name="format_real_pay">应付：￥%s</string>
    <string name="confirm_cancel_order">您确定取消此订单吗？</string>
    <string name="confirm_delete_order">您确定删除此订单吗？</string>
    <string name="cancel_order_failed">取消订单失败</string>
    <string name="take_goods_failed">确认收货失败</string>
    <string name="search_all_order">搜索所有订单</string>
    <string name="input_search_text">请输入搜索条件</string>
    <string name="confirm_pay">确认支付</string>
    <string name="warm_confirm_pay">如果您在支付过程中遇到任何问题，请联系客服！</string>
    <string name="warm_confirm_pay_telephone">4000596069</string>
    <string name="pay_by_balance">余额支付</string>
    <string name="pay_by_chat">微信支付</string>
    <string name="pay_by_zhifubao">支付宝</string>
    <string name="modify_success">修改成功</string>
    <string name="top_up_input_car_code_hint">请输入充值卡号</string>
    <string name="top_up_input_car_pwd_hint">请输入充值卡密码</string>
    <string name="cart_code">充值卡号:</string>
    <string name="cart_code_pwd">充值密码:</string>
    <string name="sure_top_up">确认充值</string>
    <string name="set_withdraw_pwd_rule">6&#8211;20个字符</string>
    <string name="set_new_pwd">设置提现新密码:</string>
    <string name="set_new_pwd_confirm">确认提现新密码:</string>
</resources>