<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/rectangle_shape"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">
        <EditText
            android:id="@+id/order_list_search_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/search_all_order"
            android:textSize="@dimen/goods_market_price_size"
            android:textColor="@color/goods_name_color"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="#00000000"/>
        <ImageView
            android:id="@+id/order_list_search_delete"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_del1"
            android:padding="8dp"/>
        <ImageView
            android:id="@+id/order_list_search_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="2dp"
            android:src="@drawable/icon_search2"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <!-- 全部 -->
        <TextView
            android:id="@+id/order_list_all_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all"
            android:textSize="@dimen/goods_market_price_size"
            android:textColor="@color/search_order_text_selector"/>
        <View
            android:layout_width="@dimen/split_line_height"
            android:layout_height="match_parent"
            android:background="@color/divier2"/>
        <!-- 待付款 -->
        <TextView
            android:id="@+id/order_list_wait_pay_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_pay"
            android:textSize="@dimen/goods_market_price_size"
            android:textColor="@color/search_order_text_selector"/>
        <View
            android:layout_width="@dimen/split_line_height"
            android:layout_height="match_parent"
            android:background="@color/divier2"/>
        <!-- 待发货 -->
        <TextView
            android:id="@+id/order_list_wait_send_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_send_goods"
            android:textSize="@dimen/goods_market_price_size"
            android:textColor="@color/search_order_text_selector"/>
        <View
            android:layout_width="@dimen/split_line_height"
            android:layout_height="match_parent"
            android:background="@color/divier2"/>
        <!-- 待收货 -->
        <TextView
            android:id="@+id/order_list_wait_take_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_take_goods"
            android:textSize="@dimen/goods_market_price_size"
            android:textColor="@color/search_order_text_selector"/>
        <View
            android:layout_width="@dimen/split_line_height"
            android:layout_height="match_parent"
            android:background="@color/divier2"/>
        <!-- 待评价 -->
        <TextView
            android:id="@+id/order_list_wait_comment_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_comment"
            android:textSize="@dimen/goods_market_price_size"
            android:textColor="@color/search_order_text_selector"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_height"
        android:background="@color/divier2"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/order_list_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>